# Neural-Networks-C-MNIST-fashion-

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  NeuralNets  README.md  cmake_install.cmake  kaggle.json
include/: Layer.hpp  Matrix.hpp  NeuralNetwork.hpp  Neuron.hpp
include/utils/: ImageProcessor.hpp  MatrixToVector.hpp  MultiplyMatrix.hpp
src/: Layer.cpp  Matrix.cpp  NeuralNetwork.cpp  Neuron.cpp  main.cpp
src/utils/: ImageProcessor.cpp  MatrixToVector.cpp  MultiplyMatrix.cpp
